--- a/index.html
+++ b/index.html
@@ -25,36 +25,37 @@
         <main> 
             <div id="about" class="center">
                 <h2>About Me</h2>
-                <p>A resilient and motivated student studying BSc Computer Science at the University of Birmingham <br>
-                    looking to provide real world software solutions. Proficient in a range of programming languages <br>
-                    and software systemswith a keen mind, quick at grasping and adapting to new concepts.</p>
+                <p>Hi, I am a second year student Computer Science student at the University of Birmingham residing in Leicester.<br>
+                    Currently, I am looking to provide real world software solutions at companies through internship or placement opportunities.<br>
+                    Feel free to contact me for any enquiries.</p>
             </div>
             <div id="resume" class="center">
                 <h2>Resume</h2>
                 <embed src="/assets/CV.pdf" width="75%" height="500px" type="application/pdf"></embed>
             </div>
             <div id="projects">
-                <h2 style="text-align: center;">Projects</h2>
+                <h2 class="center">Projects</h2>
                 <section>
                     <a href="https://github.com/khilankamlesh/khilan.uk" target="_blank" rel="noopener noreferrer">
-                        <button><h3>Project 1</h3><p>Using HTML & CSS to design my website. Future improvements: Responsive design</p></button>
+                        <button><h2>Portfolio Website</h2><p>Coded in HTML & CSS to design my website. 
+                                                            Possible future improvements: Responsive design, Interactive website using JavaScript</p></button>
+                    </a>
+                    <a href="https://github.com/khilankamlesh/Student-Marks-Capture-System" target="_blank" rel="noopener noreferrer">
+                        <button><h2>Student Marks Capture System</h2><p>Project 1/3 as part of the OOP module at the University of Birminghmam. Scored 100%</p></button>
                     </a>
                     <a href="https://github.com/khilankamlesh" target="_blank" rel="noopener noreferrer">
-                        <button><h3>Project 2</h3><p>Testing variable length. One Two Three Four Five Six Seven Eight Nine Ten Eleven Twelve Thirteen</p></button>
-                    </a>
-                    <a href="https://github.com/khilankamlesh" target="_blank" rel="noopener noreferrer">
-                        <button><h3>Project 3</h3><p>Description. Used HTML & CSS to create my portfolio website. Today is the 5th October 2022. How long will the string go</p></button>
+                        <button><h2>Project 3</h2><p>Insert Description</p></button>
                     </a>
                   </section>
                   <section>
-                    <a href="https://github.com/khilankamlesh/khilan.uk" target="_blank" rel="noopener noreferrer">
-                        <button>Project 4</button>
+                    <a href="https://github.com/khilankamlesh" target="_blank" rel="noopener noreferrer">
+                        <button><h2>Project 4</h2><p>Insert Description</p></button>
                     </a>
-                    <a href="https://github.com/khilankamlesh/khilan.uk" target="_blank" rel="noopener noreferrer">
-                        <button>Project 5</button>
+                    <a href="https://github.com/khilankamlesh" target="_blank" rel="noopener noreferrer">
+                        <button><h2>Project 5</h2><p>Insert Description</p></button>
                     </a>
-                    <a href="https://github.com/khilankamlesh/khilan.uk" target="_blank" rel="noopener noreferrer">
-                        <button>Project 6</button>
+                    <a href="https://github.com/khilankamlesh" target="_blank" rel="noopener noreferrer">
+                        <button><h2>Project 6</h2><p>Insert Description</p></button>
                     </a>
                   </section>
             </div>
