--- a/index.html
+++ b/index.html
@@ -37,25 +37,26 @@
                 <h2 class="center">Projects</h2>
                 <section>
                     <a href="https://github.com/khilankamlesh/khilan.uk" target="_blank" rel="noopener noreferrer">
-                        <button><h2>Portfolio Website</h2><p>Coded in HTML & CSS to design my website. 
+                        <button><h2>Portfolio Website</h2><p>Used HTML & CSS to design my personal website. 
                                                             Possible future improvements: Responsive design, Interactive website using JavaScript</p></button>
                     </a>
-                    <a href="https://github.com/khilankamlesh/Student-Marks-Capture-System" target="_blank" rel="noopener noreferrer">
-                        <button><h2>Student Marks Capture System</h2><p>Project 1/3 as part of the OOP module at the University of Birminghmam. Scored 100%</p></button>
+                    <a href="https://github.com/khilankamlesh/Music-Client-Server-Database" target="_blank" rel="noopener noreferrer">
+                        <button><h2>Music Client-Server Database</h2><p>Project as part of the Full Stack Application Development (FSAD) module at the University of Birminghmam. Implementing a Multi Client–Server application using the TCP protocol.</p></button>
                     </a>
-                    <a href="https://github.com/khilankamlesh" target="_blank" rel="noopener noreferrer">
-                        <button><h2>Project 3</h2><p>Insert Description</p></button>
+                    <a href="https://github.com/khilankamlesh/The-Colossal-Adventure-Game" target="_blank" rel="noopener noreferrer">
+                        <button><h2>The Colossal Adventure Game</h2><p>Project as part of the Object Oriented Programming (OOP) module at the University of Birmingham, implementing HashMaps and advanced OOP concepts such as interfaces.</p></button>
                     </a>
+                    
                   </section>
                   <section>
-                    <a href="https://github.com/khilankamlesh" target="_blank" rel="noopener noreferrer">
-                        <button><h2>Project 4</h2><p>Insert Description</p></button>
+                    <a href="https://github.com/khilankamlesh/Taxing-Trade-Route-Database" target="_blank" rel="noopener noreferrer">
+                        <button><h2>Taxing Trade Route Database</h2><p>Project as part of the FSAD module at the University of Birmingham. Creating and implementing a database to control and tax various trade routes in a fictitious galaxy ecosystem</p></button>
                     </a>
-                    <a href="https://github.com/khilankamlesh" target="_blank" rel="noopener noreferrer">
-                        <button><h2>Project 5</h2><p>Insert Description</p></button>
+                    <a href="https://github.com/khilankamlesh/Bingo-Game" target="_blank" rel="noopener noreferrer">
+                        <button><h2>Bingo Game</h2><p>Project as part of the OOP module at the University of Birmingham, implementing advanced OOP concepts.</p></button>
                     </a>
-                    <a href="https://github.com/khilankamlesh" target="_blank" rel="noopener noreferrer">
-                        <button><h2>Project 6</h2><p>Insert Description</p></button>
+                    <a href="https://github.com/khilankamlesh/Student-Course-Capture-GUI" target="_blank" rel="noopener noreferrer">
+                        <button><h2>Student Course Capture GUI</h2><p>Project as part of the Full Stack Application Development (FSAD) module at the University of Birmingham, focusing on front-end GUI development</p></button>
                     </a>
                   </section>
             </div>
@@ -63,7 +64,7 @@
                 <h2 class="center">Contact</h2>
                 <h3><i class="fa-solid fa-location-crosshairs fa-2xl"></i> Leicester, England</h3>
                 <p><i class="fa-solid fa-phone fa-2xl"> +447383517487</i></p>
-                <p><i class="fa-solid fa-envelope fa-2xl">   khilan05@gmail.com</i></p>
+                <p><i class="fa-solid fa-envelope fa-2xl"> khilan05@gmail.com</i></p>
             </div>
         </main>
     
