--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             </div>
             <div id="resume" class="center">
                 <h2>Resume</h2>
-                <embed src="https://github.com/khilankamlesh/khilan.uk/blob/793b237e7ecef0ab4b14f8d60b78694667c45e4a/assets/CV.pdf" width="75%" height="500px" type="application/pdf"></embed>
+                <a href="https://github.com/khilankamlesh/khilan.uk/blob/793b237e7ecef0ab4b14f8d60b78694667c45e4a/assets/CV.pdf" target="_blank" rel="noopener noreferrer">
+                        <button><h2>View Here</h2></button>
+                </a>
             </div>
             <div id="projects">
                 <h2 class="center">Projects</h2>
